# whatsapp-spam

./: README.md  pyproject.toml  spam.py
